wp-content/themes/stclair/src/sass/hero-slider.scss
.hero-slider {

    &__wrapper {
        position: relative;
        background: black;
        height: calc(100% - 10px);
        overflow: hidden;
        
        .tns-nav,
        [data-action='stop'],
        [data-action='start'] {
            display: none;
            visibility: hidden;
        }
    
        .tns-controls {
            position: absolute;
            display: flex;
            justify-content: space-between;
            width: 100%;
            top: 50%;
            transform: translateY(-50%);
            z-index: 2;
        }

        [data-controls='prev'],
        [data-controls='next'] {
            background: transparent;
            color: white;
            height: 40px;
            border: none;
            background-repeat: no-repeat;
            color: transparent;
        }

        [data-controls='prev'] {
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='28' viewBox='0 0 19 40'%3E%3Cpath fill='none' fill-rule='evenodd' stroke='%23FFF' stroke-linecap='round' stroke-width='2' d='M18 39L2 20 18 1'/%3E%3C/svg%3E%0A");
            margin-left: 20px;

            @include breakpoint(smalldesktop) {
                margin-left: 40px;
                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='40' viewBox='0 0 19 40'%3E%3Cpath fill='none' fill-rule='evenodd' stroke='%23FFF' stroke-linecap='round' stroke-width='2' d='M18 39L2 20 18 1'/%3E%3C/svg%3E%0A");
            }
        }

        [data-controls='next'] {
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='28' viewBox='0 0 19 40'%3E%3Cpath fill='none' fill-rule='evenodd' stroke='%23FFF' stroke-linecap='round' stroke-width='2' d='M1 39l16-19L1 1'/%3E%3C/svg%3E%0A");
            margin-right: 20px;

            @include breakpoint(smalldesktop) {
                margin-right: 40px;
                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='40' viewBox='0 0 19 40'%3E%3Cpath fill='none' fill-rule='evenodd' stroke='%23FFF' stroke-linecap='round' stroke-width='2' d='M1 39l16-19L1 1'/%3E%3C/svg%3E%0A");
            }
        }
    }

    &__content {
        position: absolute;
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        z-index: 2;

        &--inner {
            text-align: center;
        }

        &--diamond-divider {
            display: none;
            visibility: hidden;
        }

        &--logo {
            margin: 40px 40px 0;
            max-width: 160px;
            width: 100%;
            animation-name: fadeIn;
            animation-duration: 2s;

            @keyframes fadeIn {
                from {opacity: 0;}
                to {opacity: 1;}
            }
            
            @include breakpoint(tablet) {
                max-width: 230px;
            }

            @include breakpoint(desktop) {
                max-width: 260px;
            }

            @include breakpoint(largedesktop) {
                max-width: 288px;
            }
        }

        &--heading {
            color: white;
            padding: 30px 30px 0;
            animation-name: fadeIn;
            animation-duration: 2s;
            max-width: 935px;
            
            @keyframes fadeIn {
                from {opacity: 0;}
                to {opacity: 1;}
            }
        }

        &--text {
            color: white;
            font-family: $tertiary-font-family;
            font-weight: 300;
            padding: 30px 80px;
            max-width: 750px;
            letter-spacing: 1.49px;
            margin: 0 auto;
            font-size: em(12);
            line-height: 22px;
            animation-name: fadeIn;
            animation-duration: 2s;

            @keyframes fadeIn {
                from {opacity: 0;}
                to {opacity: 1;}
            }

            @include breakpoint(smalldesktop) {
                font-size: em(16);
                line-height: 27px;
                padding: 30px;
            }
        }
    }

    &__image {
        width: auto;
        max-height: 480px;
        // do this to remove empty space below image
        vertical-align: bottom;

        @include breakpoint(tablet) {
            width: 100%;
            max-height: none;
        }

        // transition: width ease-in 2s;

        // .tns-slide-active {
        //     width: 120%;

        //     animation-name: fadeIn;
        //     animation-duration: 2s;

        //     @keyframes fadeIn {
        //         from {width: 100%;}
        //         to {width: 120%;}
        //     }
        // }
    }

    &__watercolor-wrapper {
        overflow: hidden;
        // remove any gaps 
        font-size: 0;
    }

    &__watercolor {
        width: 150%;

        @include breakpoint(tablet) {
            width: 100%;
        }
    }
}

.home {
    .hero-slider {
        &__content {
            background-color: rgba(29,59,155,0.2);
        }

        &__content--diamond-divider {

            @include breakpoint(desktop) {
                display: block;
                visibility: visible;
                margin: 0 auto;
                animation-name: fadeIn;
                animation-duration: 5s;

                @keyframes fadeIn {
                    from {opacity: 0;}
                    to {opacity: 1;}
                }
            }
        }

        &__content--text {
            text-transform: uppercase;
            letter-spacing: 4.9px;
            font-size: em(12);
            line-height: 22px;

            @include breakpoint(smalldesktop) {
                font-size: em(18);
                line-height: 34px;
            }
        }
    }
}

